fix(ww): increase header z index to prevent content covering it

--- a/wordweb-app/src/main/resources/scss/pages/_search.scss
+++ b/wordweb-app/src/main/resources/scss/pages/_search.scss
@@ -281,7 +281,7 @@
   @include media-breakpoint-down(sm) {
     position: sticky;
     background-color: var(--color-gray-010);
-    z-index: 1;
+    z-index: 1071;
     // Offset by header height
     top: 75px;
     margin: 0 -15px;
