--- a/wordweb-app/src/main/resources/view/css/styles.css
+++ b/wordweb-app/src/main/resources/view/css/styles.css
@@ -15029,7 +15029,7 @@ body {
   .sticky-scroll-panel {
     position: sticky;
     background-color: var(--color-gray-010);
-    z-index: 1;
+    z-index: 1071;
     top: 75px;
     margin: 0 -15px;
     padding: 1px 15px 14px;
@@ -15645,7 +15645,7 @@ span.material-symbols-outlined--small {
   padding: 16px 16px 16px 4px;
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 1072;
   background-color: var(--color-white);
   border-bottom: 1px solid var(--color-old-lighter-gray);
 }
@@ -15765,7 +15765,6 @@ span.material-symbols-outlined--small {
   grid-template-columns: repeat(3, 1fr);
   gap: 16px;
   border-radius: 5px;
-  z-index: 1050;
   background-color: var(--color-white);
   color: var(--color-dark-blue);
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2509803922);
